# zsim

./: .gitignore  .sconsign.dblite  SConstruct  clean.sh  compile.sh
configs/: flashgnn.cfg  test_read_flash.cfg
configs/ssd/: config_4096_333.xml  dummy.trace  workload_4096_333.xml
libconfig/: Makefile  config.status  libtool
libconfig/autom4te.cache/: requests
libconfig/doc/: Makefile
libconfig/examples/: Makefile
libconfig/examples/c/: Makefile  example1  example2  example3  example4
libconfig/examples/c++/: Makefile  example1  example2  example3  example4
libconfig/lib/: Makefile  libconfig++.la  libconfig++.pc  libconfig.pc
libconfig/lib/.deps/: libconfig___la-grammar.Plo  libconfig___la-libconfig.Plo  libconfig___la-libconfigcpp.Plo  libconfig___la-scanctx.Plo  libconfig___la-scanner.Plo  libconfig___la-strbuf.Plo  libconfig___la-strvec.Plo  libconfig___la-util.Plo  libconfig___la-wincompat.Plo  libconfig_la-grammar.Plo  libconfig_la-libconfig.Plo  libconfig_la-scanctx.Plo  libconfig_la-scanner.Plo  libconfig_la-strbuf.Plo  libconfig_la-strvec.Plo  libconfig_la-util.Plo  libconfig_la-wincompat.Plo
libconfig/lib/.libs/: libconfig++.so.11.0.2  libconfig.lai  libconfig.so.11.0.2
libconfig/tests/: Makefile  libconfig_tests
libconfig/tests/.deps/: libconfig_tests-tests.Po
libconfig/tinytest/: Makefile
libconfig/tinytest/.deps/: tinytest.Po
misc/hooks/: zsim_hooks.h
src/: SConscript  pin_cmd.cpp  process_tree.cpp  zsim.cpp  zsim.h
tests/: CMakeLists.txt  test_file_read.cfg  test_read_flash.cc
tests/src/: options.hh
(+57 files in other folders)
